<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/net.bevster.lorensjon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" >

        <TextView
            android:id="@+id/info_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/Spinner_skole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/chk_skole" />

        <Spinner
            android:id="@+id/spinner_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/chk_student" />

        <Spinner
            android:id="@+id/spinner_klasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/chk_klasse" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox_profil_nett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Laste fra nett" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_ref_skole"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" * Skole" />

        <Button
            android:id="@+id/btn_ref_klasse"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default_small"
            android:text=" * Klasse" />

    </LinearLayout>

</LinearLayout>